--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
     <h1>Welcome to My GitHub Pages</h1>
     <p>This is a simple HTML page used for testing GitHub Pages. You can modify and expand this page as you like.</p>
-    <img src="https://example.com/sample-image.jpg" alt="Sample Image" width="300">
+    <img style="width:32px;height:32px" src="https://api.1024pixels.art/api/image?id=7104489458947276405218433968580007389896578233269789006437811646274333582301">
     <p>Here is a link to <a href="https://github.com">GitHub</a>.</p>
     <p>You can also add some other elements, such as lists:</p>
     <ul>
